--- a/admissions.html
+++ b/admissions.html
@@ -19,7 +19,7 @@
         aria-label="Lorem Ipsum University"
       >
         <li role="none">
-          <a role="menuitem" href="#home"> Home </a>
+          <a role="menuitem" href="./index.html"> Home </a>
         </li>
         <li role="none">
           <a
@@ -46,7 +46,7 @@
             role="menuitem"
             aria-haspopup="true"
             aria-expanded="false"
-            href="#academics"
+            href="./admissions.html"
           >
             Academics
           </a>
