--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             role="menuitem"
             aria-haspopup="true"
             aria-expanded="false"
-            href="#academics"
+            href="./admissions.html"
           >
             Academics
           </a>
